# telegraph-hub-rs

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md
locales/: en.json  zh-CN.json  zh-TW.json
src/: cache.rs  db.rs  error.rs  extractors.rs  i18n.rs  main.rs  middleware.rs
src/routes/: account.rs  lang.rs  mod.rs  pages.rs
src/telegraph/: client.rs  mod.rs  render.rs  types.rs
static/: app.js  style.css
templates/: account_info.html  base.html  index.html  page_editor.html  page_list.html
templates/fragments/: account_card.html  page_preview.html  page_row.html  search_progress.html  toast.html
